--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,19 @@
 @media only screen and (max-width: 500px) {
+
+  #nav a {
+    padding: 0 0 0 10px;
+  }
+
   #home h1 {
     font-size: 3em;
+  }
+
+  #home::after {
+    position: absolute;
+    content: "";
+    top: 0; right: 0; bottom: 0; left: 0;
+    background-image: linear-gradient(183deg, rgba(255, 255, 255, 0) 85%, rgb(244, 115, 225) 85%);
+    z-index: -100;
   }
 
   .content-small {
