--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,6 +4,10 @@
     padding: 0 0 0 10px;
   }
 
+  #nav .right a {
+    padding-top: 5px;
+  }
+
   #home h1 {
     font-size: 3em;
   }
@@ -27,7 +31,7 @@
   .flex-tool {
     flex-wrap: wrap;
   }
-  
+
   .tool {
     padding: 5px;
   }
