--- a/css/mobile.css
+++ b/css/mobile.css
@@ -13,7 +13,15 @@
   }
 
   #home h2.caption {
+    color: white;
+    display: block;
+    font-family: 'Roboto Condensed';
+    font-weight: 300;
+    letter-spacing: 1px;
+    position: absolute;
     top: 70vh;
+    width: 100%;
+    text-align: center;
   }
 
   #home::after {
