--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,8 +4,8 @@
     padding: 0 0 0 10px;
   }
 
-  #nav .right a {
-    padding-top: 5px;
+  #nav .right {
+    padding-top: 10px;
   }
 
   #home h1 {
@@ -19,7 +19,7 @@
     font-weight: 300;
     letter-spacing: 1px;
     position: absolute;
-    top: 70vh;
+    top: 75vh;
     width: 100%;
     text-align: center;
   }
